syntax = "proto3";
package light;

service Lantern {
  rpc GetTasks(Filter) returns (Tasks) {}
  rpc AddTasks(Tasks) returns (StatusCode) {}
}

message Filter {
  string status = 1;
  string read = 2;
  string sort_by = 3;
  string sort_order = 4;
  string source = 5;
}

message Tasks { string body = 1; }

message StatusCode {
  bool success = 1;
  string msg = 2;
}
